<resources>
    <string name="app_name">Dockaan</string>


    <!--Date -->
    <string name="DATE_FORMATE_TODAY" translatable="false">today</string>
    <string name="DATE_FORMATE_YESTERDAY" translatable="false">yesterday</string>
    <string name="DATE_fiew_minutes_ago" translatable="false">%1$d minutes ago</string>
    <string name="DATE_fiew_hours_ago" translatable="false">%1$d hours ago</string>
    <string name="DATE_fiew_days_ago" translatable="false">%1$d days ago</string>
    <string name="DATE_fiew_seconds_ago" translatable="false">few seconds ago</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_question">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="store_name">Store name</string>
    <string name="store_location">Store location</string>
    <string name="create_account">Create account</string>
    <string name="do_you_have_an_account_question">Do you have an account?</string>
    <string name="code_send_info">We will send you a code to change your password</string>
    <string name="enter_code_info">Enter the code we sent you via SMS</string>
    <string name="new_password">New password</string>

    <!--Api Errors-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty phone number.</string>
    <string name="invalid_email">Please provide a valid phone number.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <string name="buy_now">Buy now</string>
    <string name="dummy_text">dummy text dummy text dummy text dummy text dummy text dummy text</string>
    <string name="title_activity_main" translatable="false">Main</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="categories">Categories</string>
    <string name="main">Main</string>
    <string name="notifications">Notifications</string>
    <string name="dummy_item_top_text">13 Containers</string>
    <string name="dummy_item_title">Floor wash bla bla something</string>
    <string name="dummy_price">20000</string>
    <string name="currency">S.P</string>
    <string name="dummy_header">Cleaners</string>
    <string name="offers_available">Offers available</string>
    <string name="see_all_offers">See all offers</string>
    <string name="see_all">See all</string>
    <string name="code">Code</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="visit_text">We\'ll visit you soon</string>
    <string name="request_submitted_text">Request submitted</string>
    <string name="search" translatable="false">Search</string>
    <string name="dummy_pepsi_title"><![CDATA[Pepsi bottle &#188; L]]></string>
    <string name="price">Price</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="pepsi_co" translatable="false">PEPSI co</string>
    <string name="about_the_product">About the product</string>
    <string name="similar_products">Similar Products</string>
    <string name="more">More</string>
    <string name="product_details">Product Details</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="owner_name">Owner Name</string>
    <string name="do_you_like_our_service">Do you like our service?</string>
    <string name="your_rating_will_help_us_improve_our_services">Your rating will help us improve our services</string>
    <string name="great">GREAT</string>
    <string name="ok">OK</string>
    <string name="bad">BAD</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="skip_rating">Skip rating</string>
    <string name="order_details">Order Detail</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_id">Order ID</string>
    <string name="order_status">Order Status</string>
    <string name="preparing">Preparing</string>
    <string name="edit">edit</string>
    <string name="submit">Submit</string>
    <string name="terms_conditions_msg">Please Agree to our terms and conditions</string>
    <string name="send_order">Send Order</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="low_total_price_error">Price should be more than 20,000 SP</string>
    <string name="product_not_available_error">Sorry, %s is not availbale now</string>
    <string name="country_code">00963</string>
    <string name="provide_valid_phone_number_statement">Please provide a valid phone number</string>
    <string name="provide_fill_missing_info">Please fill the fields above</string>
    <string name="total">Total</string>
    <string name="no_notifications">No Notifications!</string>
    <string name="pack">Pack</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="terms_and_conditions">Accept privacy policy and Terms and Conditions</string>
    <string name="activate_account_error">Your account needs to be activated</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="inDelivery">In Delivery</string>
    <string name="status">Status</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Subtotal</string>
    <string name="coupon_code">Coupon code</string>
    <string name="add">Add</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="usage">Usage</string>
    <string name="expiry">Expiry</string>
    <string name="coupons">Coupons</string>
    <string name="officalPrice">Consumer price</string>
    <string name="see_more">See more</string>
    <string name="featured_products">Featured Products</string>
    <string name="slogan">Some slogan about Dockaan service</string>
    <string name="favorite">Favorite</string>
    <string name="fav_added">Added to Favorite</string>
    <string name="already_favorite">Product is already in favorite</string>
    <string name="no_in_favorite">This product doesnt exist in favorite</string>
    <string name="fav_removed">Product removed from favorite</string>
    <string name="forgetPasswordMsg">Thank you, we will contact you to provide you with the information you need.</string>
    <string name="send">Send</string>
    <string name="order">Order</string>
    <string name="past_orders">Past Orders</string>
    <string name="coupon_not_found_error">Coupon Not Found or Date is Expired</string>
    <string name="coupon_in_use_error">Coupon already in use</string>
    <string name="add_notes">Add notes</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="after_order_msg">Your order will be delivered in 24 buisiness hours..</string>
    <string name="in_delivery">In delivery</string>
    <string name="calnceled">Canceled</string>
    <string name="price_before_discount">Price before discount</string>
    <string name="coupon_value">Coupon value</string>
    <string name="max_quantity_reached">You can\'t Order more than %1$d items of this offer</string>
    <string name="unknown_error_while_submitting_order">unknown error occurred, please contact us for more details</string>

    <!--errors-->
    <string name="err_wrong_credentials">wrong phonenumber or password</string>

    <string name="err_not_loged_in">Please login again</string>

    <string name="warn_cant_cancel_order">You can\'t cancel an order after 8 AM</string>
    <string name="confirm_delete_order_title">are you sure?</string>
    <string name="confirm_delete_order_desc">are you sure you want to delete this order?</string>

    <string name="level">Level</string>
    <string name="balance">Balance</string>
    <string name="rewards">Rewards</string>
    <string name="valid_till">Valid till</string>
    
    
    <string name="invalid_client_title">Critical Update!</string>
    <string name="invalid_client_msg">This version is no more supported\nPlease download the latest version</string>
    <string name="warning_client_title">Update!</string>
    <string name="warning_client_msg">There is new version available at the store</string>
    <string name="sys_not_running_title">Invalid Version!</string>
    <string name="sys_not_running_msg">This version is expired</string>
    <string name="store_button">Go to store</string>
    <string name="offer_achieved">You Have Achieved this offer</string>
    <string name="congrats">Congratulations!</string>
    <string name="go_to_offers">Check Offers In Profile</string>
    
    

</resources>
