<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        android:orderInCategory="300"
        />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_gray_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        />


</menu>