<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ratingBackground"
    android:background="@color/light_green">



    <ImageView
        android:id="@+id/ratingFace"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:src="@drawable/great_face"
        android:layout_marginBottom="30dp"
        />


    <TextView
        android:id="@+id/greatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryBlackTextView"
        android:text="@string/great"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="48dp"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/okText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryBlackTextView"
        android:text="@string/ok"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="130dp"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/badText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryBlackTextView"
        android:text="@string/bad"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="48dp"
        android:textSize="22sp"
        />


</FrameLayout>