<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.order_details.OrderDetailsActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/orderDetailsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title=""
                app:titleTextAppearance="@style/PrimaryBlackTextView"></android.support.v7.widget.Toolbar>

            <TextView
                style="@style/PrimaryBlackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_details" />

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/creationDate"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:text="23/02/2018"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cancelOrderBtn"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/cancel_order"
                    android:textSize="16sp" />

                <TextView
                    style="@style/SecondaryBoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/order_id"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderId"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="25dp"
                    android:text="OPRQS123"
                    android:textSize="16sp" />

                <TextView
                    style="@style/SecondaryBoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginBottom="25dp"
                    android:text="@string/order_status"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderStatus"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:text="@string/preparing"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="16dp"
                android:id="@+id/couponLayout"
                android:visibility="gone">


                <TextView
                    style="@style/SecondaryBoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/coupon_code"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderCouponCode"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="16dp"
                    android:text="093809"
                    android:textSize="16sp" />


                <TextView
                    style="@style/SecondaryBoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:text="@string/coupon_value"
                    android:layout_marginBottom="24dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderCouponValue"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:text="20%"
                    android:textSize="16sp" />


                <TextView
                    style="@style/SecondaryBoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:text="@string/price_before_discount"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderPriceBeforeDiscount"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_marginTop="16dp"
                    android:text="@string/dummy_price"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_card_black">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/itemsRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="70dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="70dp"
                    android:background="@color/secondaryText" />

                <TextView
                    style="@style/SecondaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/currency"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/total"
                    style="@style/PrimaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="40dp"
                    android:text="33000"
                    android:textSize="32sp" />

                <TextView
                    style="@style/SecondaryBlackTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/total"
                    android:textSize="18sp" />


            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>