<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.registration.RegistrationActivity"
        tools:layout_editor_absoluteY="25dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo" />


        <LinearLayout
            android:id="@+id/loginPhoneCard"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shadow_black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_phone_gray_24dp" />

            <EditText
                android:id="@+id/loginPhoneNumber"
                style="@style/PrimaryBoldTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxHeight="40dp"
                android:textAlignment="viewStart"
                android:textColorHint="@color/light_gray" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/loginPasswordCard"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shadow_black"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_lock_gray_24dp" />

            <EditText
                android:id="@+id/loginPassword"
                style="@style/PrimaryBoldTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColorHint="@color/light_gray" />

        </LinearLayout>


        <TextView
            android:id="@+id/forgotPasswordText"
            style="@style/WhiteBoldTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/forgot_password"
            android:textSize="14sp" />


        <Button
            android:id="@+id/loginBtn"
            style="@style/WhiteBoldTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/action_button_shape_round"
            android:text="@string/login"
            android:textColor="@color/white" />


        <LinearLayout
            android:id="@+id/loginSignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/textView14"
                style="@style/WhiteRegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:alpha=".7"
                android:text="@string/don_t_have_an_account_question" />


            <TextView
                android:id="@+id/signUpText"
                style="@style/WhiteBoldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>